--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="msg hide">
-        <p id="winner">Winner</p>
+        <p id="winner">Winner!!</p>
         <button class="new">New Game</button>
     </div>
     <main>
